# types

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_deps  makefile
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: list.h
include/types/: list.h  stack.h  types.h
src/: linear_list.cpp  stack.cpp
test/: main.cpp  stack_test.cpp
types-test/: main.cpp  test_assert.h
types.xcodeproj/: project.pbxproj
types.xcodeproj/project.xcworkspace/xcuserdata/jackthake.xcuserdatad/: UserInterfaceState.xcuserstate
types.xcodeproj/xcshareddata/xcschemes/: types 1.xcscheme
types.xcodeproj/xcuserdata/jackthake.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
types.xcodeproj/xcuserdata/jackthake.xcuserdatad/xcschemes/: xcschememanagement.plist
